Add Contribution Form − First step

--- a/src/AFUP/HaphpyBirthdayBundle/Resources/translations/messages.en.yml
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/translations/messages.en.yml
@@ -39,3 +39,8 @@ content:
     authentication:
         button:
             label: GitHub Authentication
+
+website_credit_wanted:
+    yes:    Yes, I want to be credited on this anniversary website
+    no:     No, I prefer to stay anonymous
+    choose: Credit me on the website?
