--- a/src/AFUP/HaphpyBirthdayBundle/Resources/translations/messages.fr.yml
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/translations/messages.fr.yml
@@ -39,3 +39,9 @@ content:
     authentication:
         button:
             label: Authentification GitHub
+
+
+website_credit_wanted:
+    yes:    Oui, je souhaite être crédité sur le site de l'anniversaire
+    no:     Merci mais je préfère rester anonyme
+    choose: Afficher mon pseudo sur le site ?
