Create Contributions page with only contributors list

--- a/src/AFUP/HaphpyBirthdayBundle/Resources/translations/messages.en.yml
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/translations/messages.en.yml
@@ -52,3 +52,6 @@ form:
         submission_success: Thank you for your contribution!
     submit:
         label: send
+
+contributions:
+    contributors_list: List of Public Contributors
