--- a/src/AFUP/HaphpyBirthdayBundle/Resources/translations/messages.fr.yml
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/translations/messages.fr.yml
@@ -54,3 +54,6 @@ form:
         submission_success: Nous vous remercions pour votre contribution !
     submit:
         label: Envoyer
+
+contributions:
+    contributors_list: Liste des contributeurs publics
