Add punchline to header

--- a/src/AFUP/HaphpyBirthdayBundle/Resources/translations/messages.fr.yml
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/translations/messages.fr.yml
@@ -1,4 +1,5 @@
 haphpy:
+    punchline: Célèbre 20 ans de PHP en partageant une vidéo commémorative
     date_format:
         full: 'd/m/Y, H:i:s T'
 
